share options in proudbar don't have enough contrast when in mobile view https://github.com/proudcity/wp-proudcity/issues/1785

--- a/app/pattern-scss/_footer.scss
+++ b/app/pattern-scss/_footer.scss
@@ -96,7 +96,7 @@ $footer-padding: 20px !default;
     }
 
     // now defaulting to white for footer actions
-    body.light-background-highlight & {
+    body.light-background-footer-actions & {
       .nav > li a {
         &:not(.btn-primary) {
           color: $light-back-highlight-color;
@@ -104,7 +104,7 @@ $footer-padding: 20px !default;
           &:hover,
           &:active,
           &:focus {
-            color: darken($light-back-highlight-color, 10%);
+            color: darken($extra-light-back-highlight-color, 10%);
           }
         }
       }
